# replace

./: .gitignore  .gitreview  AUTHORS  COPYING.exception  ChangeLog  ColoredOutput.cc  ColoredOutput.h  DetectLocale.cc  DetectLocale.h  HandleFile.cc  HandleFile.h  Makefile.am  Makefile.in  OutDebug.cc  OutDebug.h  OwCallback1.cc  OwCallback1.h  PrimanList.cc  PrimanList.h  README  RestoreShell.cc  RestoreShell.h  add_cast.cc  add_cast.h  add_mlm.cc  add_mlm.h  add_mlm_wbox.cc  add_mlm_wbox.h  add_wdgassign.cc  add_wdgassign.h  argenumtype.cc  colored_output.cc  configure  configure.ac  correct_va_multiple_malloc.cc  correct_va_multiple_malloc.h  find_decl.cc  find_decl.h  find_files.cc  find_files.h  (+61 more)
cpputils/: Makefile.am
cpputils/cpputilsshared/: CppGet.cc  CppGet.h  CppRead.cc  CppRead.h  CppSqlReader.cc  CppSqlReader.h  FetchTableInherit.h  FetchTableTuple.h  Makefile.am  Makefile.in  Makefile.pl  aes_crypt_util.cc  aes_crypt_util.h  backtrace.h  blockupdate.cc  blockupdate.h  cpp_util.cc  cpp_util.h  cpp_utils.h  cppdir.cc  cppdir.h  cpputils.h  iterator.h  jvector.h  leoini.cc  lo2str_enum_util.cc  lo2str_enum_util.h  locking_utils.h  logtool2.cc  logtool2.h  range.h  report_exception.h  sql_exception.h  string_utils.cc  string_utils.h  utf8_util.cc  utf8_util.h  vec_utils.cc  vec_utils.h  xml.cc  (+1 more)
cpputils/cpputilsshared/cpputilsformat/: Makefile.am  Makefile.in  Makefile.pl  cformat.h  cwformat.cc  cwformat.h  format.h  format2.cc  format2.h  wformat2.cc  wformat2.h
cpputils/cpputilsterm/: Makefile.pl  cpplist_util.cc  cpplist_util.h  listbuffer_utils.cc  listbuffer_utils.h
cpputils/dbutils_s/: WamasSqlContext.h  WamasSqlEditListSimple.h  WamasSqlExecArgs.h  WamasSqlReadListSimple.h  WamasSqlReadListSimpleArgs.h  headposcont.h
cpputils/dummy/: Makefile.pl
cpputils/wamex_s/: wamasexception.cc  wamasexception.h
test/: test.sh  test_add_mlm.sh  test_addcast.sh  test_assign.sh  test_convnull.sh  test_fix_long.sh  test_format-string.sh  test_genericpointer.sh  test_implicit.sh  test_mlm.sh  test_owcallback.sh  test_primanlist.sh  test_prm.sh  test_remove_versid.sh  test_reset_versid.sh  test_restoreshell.sh  test_scoped_cstr.sh  test_space.sh  test_sprintf.sh  test_strform.sh  test_unused_var.sh  test_vamultiplemalloc.sh  test_vamultiplemalloc2015.sh
test/add-mlm/t01/: test.c  test.c.erg
test/add-mlm/t02/: test.c  test.c.erg
test/add-mlm/t03/: test.c  test.c.erg
test/add-mlm/t04/: test.c  test.c.erg
test/add-mlm/t05/: test.c  test.c.erg
test/add-mlm/t06/: test.c  test.c.erg
test/add-mlm/t07/: test.c  test.c.erg
test/add-mlm/t08/: me_vzswork.c  me_vzswork.c.erg
test/add-mlm/t09/: test.c
test/addcast/t01/: servc_info.c  servc_info.c.erg
test/addcast/t02/: tasklist.c  tasklist.c.erg
test/assign/t01/: mt_lps.c  mt_lps.c.erg
test/assign/t02/: primanlist.cc.erg
test/convnull/t01/: pps_util.cc  pps_util.cc.erg
test/convnull/t02/: me_bearb.cc  me_bearb.cc.erg
test/fix_long/t01/: test.cc  test.cc.erg
test/fix_long/t02/: test.cc  test.cc.erg
test/format-string/t01/: me_prod.c  me_prod.c.erg
test/format-string/t02/: h1tcp.cc  h1tcp.cc.erg
test/genericpointer/t01/: me_zob.c  me_zob.c.erg
test/implicit/t01/: ftdb20.h  tdb.c.erg
test/implicit/t02/: errmsg.h  me_bzset.c  me_bzset.c.erg
test/mlm/t01/: me_taetst.c  me_taetst.c.erg
test/mlm/t02/: verlliste_util.cc.erg
test/mlm/t03/: vollstaendig_util.c  vollstaendig_util.c.erg
test/mlm/t04/: me_komanab.c  me_komanab.c.erg
test/mlm/t05/: me_visinfo.c.erg
test/orig/t01/: li_info_aus.c  li_info_aus.c.erg
test/orig/t02/: li_zap.c  li_zap.c.erg
test/orig/t03/: tour_cleanup.c  tour_cleanup.c.erg
test/orig/t04/: tes.pdl  tes.pdl.erg
test/orig/t05/: se_bwp.rc  se_bwp.rc.erg
test/orig/t06/: Makefile.pl  Makefile.pl.erg
test/orig/t07/: Makefile.pl  Makefile.pl.erg
test/orig/t08/: lrbg_bs.c  lrbg_bs.c.erg
test/orig/t09/: h1tcp.c  h1tcp.c.erg
test/orig/t10/: rbg_lasmore.pds  rbg_lasmore.pds.erg
test/orig/t11/: tr_rbg.c  tr_rbg.c.erg
test/orig/t12/: protoClean.h  protoClean.h.erg
test/orig/t13/: protoClean.apc.erg
test/owcallback/t01/: me_anmeld.rc  me_anmeld.rc.erg
test/owcallback/t02/: me_anmeld.rc  me_anmeld.rc.erg
test/owcallback/t03/: me_anmeld.rc  me_anmeld.rc.erg
test/priman/t01/: li_akp.c  li_akp.c.erg
test/priman/t02/: li_aus.c
test/priman/t03/: li_aus.c  li_aus.c.erg
test/priman/t04/: li_akp.c  li_akp.c.erg
test/priman/t05/: li_akp.c  li_akp.c.erg
test/priman/t06/: li_ausk.c  li_ausk.c.erg
test/priman/t07/: li_invp.c  li_invp.c.erg
test/priman/t08/: li_lieffaehig.c  li_lieffaehig.c.erg
test/priman/t09/: li_art.c  li_art.c.erg
test/priman/t10/: whc_li_whctp.c  whc_li_whctp.c.erg
test/priman/t11/: li_tes.c  li_tes.c.erg
test/prm/t01/: dbdaemon.cc  dbdaemon.cc.erg
test/reset_versid/t01/: owdummy.c  owdummy.c.erg
test/reset_versid/t02/: shmmsrv.pds  shmmsrv.pds.erg
test/reset_versid/t03/: Makefile.pl  Makefile.pl.erg
test/reset_versid/t04/: ap.pl  ap.pl.erg
test/reset_versid/t05/: me_findkompos.rc  me_findkompos.rc.erg
test/reset_versid/t06/: me_mlmexp.h  me_mlmexp.h.erg
test/reset_versid/t07/: special.pmm  special.pmm.erg
test/reset_versid/t08/: TuAcTmp.java  TuAcTmp.java.erg
test/reset_versid/t09/: CommandFactory.java  CommandFactory.java.erg
test/reset_versid/t10/: listview.rc  listview.rc.erg
test/reset_versid/t11/: undeployProtocol.wsdd  undeployProtocol.wsdd.erg
test/restoreshell/t01/: li_te.c  li_te.c.erg
test/restoreshell/t02/: li_abc.c  li_abc.c.erg
test/scoped_cstr/t01/: me_tebearb.cc  me_tebearb.cc.erg
test/space/t01/: tourpl.cc  tourpl.cc.erg
test/space/t02/: me_dynkort_target.cc  me_dynkort_target.cc.erg
test/space/t03/: ma_stat.cc  ma_stat.cc.erg
test/space/t04/: ma_stat.cc  ma_stat.cc.erg  ma_stat.cc.save
test/sprintf/t01/: test.cc  test.cc.erg
test/sprintf/t02/: test.cc  test.cc.erg
test/sprintf/t03/: dccwemask.cc  dccwemask.cc.erg
test/sprintf/t04/: test.cc  test.cc.erg
test/sprintf/t05/: test.cc  (+1 more)
tools/: Makefile.am  debug.h  pairs.cpp  pairs.h  theme.cpp  thread.cpp
(+17 files in other folders)
